  only has 2 levels of skip data, which are inlined into postings instead of
  being stored at the end of postings lists. This translates into better
  performance for queries that need skipping such as conjunctions.
  (Adrien Grand)

* GITHUB#13581: OnHeapHnswGraph no longer allocates a lock for every graph node (Mike Sokolov)

Changes in runtime behavior
---------------------

* GITHUB#13472: When an executor is provided to the IndexSearcher constructor, the searcher now executes tasks on the
  thread that invoked a search as well as its configured executor. Users should reduce the executor's thread-count by 1
  to retain the previous level of parallelism. Moreover, it is now possible to start searches from the same executor
  that is configured in the IndexSearcher without risk of deadlocking. A separate executor for starting searches is no
  longer required. (Armin Braun)

Bug Fixes
---------------------

* GITHUB#13498: Avoid performance regression by constructing lazily the PointTree in NumericComparator, (Ignacio Vera)

* GITHUB#13384: Fix highlighter to use longer passages instead of shorter individual terms. (Zack Kendall)

* GITHUB#13463: Address bug in MultiLeafKnnCollector causing #minCompetitiveSimilarity to stay artificially low in
  some corner cases. (Greg Miller)

* GITHUB#13553: Correct RamUsageEstimate for scalar quantized knn vector formats so that raw vectors are correctly
  accounted for. (Ben Trent)

* GITHUB#13615: Correct scalar quantization when used in conjunction with COSINE similarity. Vectors are normalized
  before quantization to ensure the cosine similarity is correctly calculated. (Ben Trent)

* GITHUB#13627: Fix race condition on flush for DWPT seqNo generation. (Ben Trent, Ao Li)

* GITHUB#13646: Fix rare test bug in TestLongValueFacetCounts that was introduced in 9.6. (Greg Miller)

Other
---------------------
(No changes)

======================== Lucene 9.11.1 =======================

Bug Fixes
---------------------
