@@ -95,6 +95,9 @@ Optimizations
 
 * GITHUB#13581: OnHeapHnswGraph no longer allocates a lock for every graph node (Mike Sokolov)
 
+* GITHUB##13644: Improve NumericComparator competitive iterator logic by comparing the missing value with the top
+  value even after the hit queue is full (Pan Guixin)
+
 Changes in runtime behavior
 ---------------------
 
